<resources>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="spb_default_speed">1.0</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="md__drawerOpenIndicatorDesc">Close left menu</string>
    <string name="md__drawerClosedIndicatorDesc">Open left menu</string>
    <string name="settings_display_language_title">Display language</string>
    <string name="settings_clearsearchhistory_title">Clear search history</string>
    <string name="settings_updates_auto_title">Automatic background sync</string>
    <string name="settings_updates_updateinterval_title">Sync interval</string>
    <string name="settings_updates_nodatainroaming_title">No data when roaming</string>
    <string name="settings_updates_update_on_startup_title">Sync on startup</string>
    <string name="settings_updates_wifionly_article_title">Wi-Fi only for article</string>
    <string name="settings_updates_wifionly_article_summary">Sync article only when Wi-Fi is connected</string>
    <string name="settings_updates_wifionly_articleimage_title">Wi-Fi only for image</string>
    <string name="settings_updates_wifionly_articleimage_summary">Sync article image only when Wi-Fi is connected</string>
    <string name="settings_updates_wifionly_podcast_title">Wi-Fi only for download</string>
    <string name="settings_updates_wifionly_podcast_summary">Download file only when Wi-Fi is connected</string>
    <string name="settings_message_keepunreaditems_title">Keep unread items</string>
    <string name="settings_message_auto_cleanup_unread_title">Auto cleanup unread</string>
    <string name="settings_message_auto_cleanup_unread_summary">Auto clean up unread articles older than selected days</string>
    <string name="settings_message_auto_cleanup_read_title">Auto cleanup read</string>
    <string name="settings_message_auto_cleanup_read_summary">Auto clean up read articles older than selected days</string>
    <string name="settings_advanced_useragent_title">HTTP header user-agent</string>
    <string name="settings_about_title">About</string>
    <string name="standard_error_message">A error has occur, please try again later</string>
    <string name="minutes_ago_short">%1$sm</string>
    <string name="hours_ago_short">%1$sh</string>
    <string name="days_ago_short">%1$sd</string>
    <string name="minutes_ago_long">%1$s mins ago</string>
    <string name="hours_ago_long">%1$s hours ago</string>
    <string name="days_ago_long">%1$s days ago</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for articles</string>
    <string name="settings">Settings</string>
    <string name="crash_message_subject">Crash Report</string>
    <string name="crash_message_body">Please help us troubleshoot by sending this crash report email. No personal information is being included.</string>
    <string name="sync_started">Sync started</string>
    <string name="sync_failed">Sync failed</string>
    <string name="image">Image</string>
    <string name="feed">Feed</string>
    <string name="new_article">%1$d new article(s)</string>
    <string name="article">Article</string>
    <string name="podcast">Podcast</string>
    <string name="tools">Tools</string>
    <string name="help">Help</string>
    <string name="no_items">No item available…</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="unknown">Unknown</string>
    <string name="confirm_title">Are you sure?</string>
    <string name="confirm_message">This action can not be undone, please confirm you want to proceed.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_read">Delete all read</string>
    <string name="delete_all">Delete all</string>
    <string name="delete">Delete</string>
    <string name="show_read">Show read</string>
    <string name="hide_read">Hide read</string>
    <string name="mark_all_read">Mark all read</string>
    <string name="mark_read_until_here">Mark read until here</string>
    <string name="mark_read_to_bottom">Mark read to bottom</string>
    <string name="toggle_star">Toggle star</string>
    <string name="toggle_read">Toggle read</string>
    <string name="switch_layout">Switch layout</string>
    <string name="share_with">Share with</string>
    <string name="text_size">Text size</string>
    <string name="extra_small">Extra Small</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra Large</string>
    <string name="translate">Translate</string>
    <string name="translate_title">Choose a language for translation</string>
    <string name="read_hidden_hint">Read articles are hidden</string>
    <string name="stop">Stop</string>
    <string name="close">Close</string>
    <string name="error_media_playback">Error has occurred during media playback</string>
    <string name="error_media_open">Error has occurred. Try use other media player</string>
    <string name="launch_browser">Launch browser</string>
    <string name="refresh">Refresh</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="copy_link">Copy link</string>
    <string name="sort_by">Sort by</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="sync_now">Sync Now</string>
    <string name="settings_updates_title">Synchronization</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_summary">Enable notifications for automatic sync</string>
    <string name="settings_notifications_ringtone_title">Select ringtone</string>
    <string name="settings_notifications_vibrate_title">Vibrate</string>
    <string name="settings_notifications_flashlight_title">Flash light</string>
    <string name="settings_display_title">Display &amp; Presentation</string>
    <string name="settings_message_title">Message Store</string>
    <string name="settings_general_options">General options</string>
    <string name="settings_display_keepstarredunread_title">Keep starred unread</string>
    <string name="settings_display_keepstarredunread_summary">Keep starred articles unread</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to">Go to...</string>
    <string name="reply">Reply</string>
    <string name="submit">Submit</string>
    <string name="attach">Attach</string>
    <string name="insert_url">Insert URL</string>
    <string name="insert_smiley">Insert smiley</string>
    <string name="insert_image_link">Insert image link</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="account_login_message">Your password is only transmitted to the forum you connect to.</string>
    <string name="sign_in_username_hint">Enter Username/Email Address</string>
</resources>