<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/dialog_title_bar_default" />
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="280.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/translate_title" />
        <Spinner android:entries="@array/translation_language_entries" android:id="@id/translate_language" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" />
    </LinearLayout>
    <LinearLayout style="@style/ButtonBar">
        <Button android:id="@id/translate" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/translate" android:layout_weight="0.5" style="@style/ButtonBar.Button" />
        <View style="@style/ButtonBar.Divider" />
        <Button android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="0.5" style="@style/ButtonBar.Button" />
    </LinearLayout>
</LinearLayout>